--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,6 @@
-
+th {
+    cursor: pointer;
+  }
     /* Button used to open the contact form - fixed at the bottom of the page */
     .open-button {
         background-color: rgb(20, 67, 220);
@@ -51,7 +53,7 @@
       padding: 5px 5px;
       border: none;
       cursor: pointer;
-      width: 80%;
+      width: 100%;
       margin-bottom:10px;
       opacity: 0.8;
     }
