--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,10 @@ th {
       width: 100%;
       margin-bottom:10px;
       opacity: 0.8;
+      margin-right:auto;
+      display:block;
+      margin-top:0%;
+      margin-bottom:3%;
     }
     
     /* Add a red background color to the cancel button */
@@ -71,7 +75,8 @@ th {
     .footer {
       bottom: 0;
       width: 100%;
-      height: 60px;
+      position: fixed;
       line-height: 60px;
+      text-align: center;
       background-color: #f5f5f5;
   }
